--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -28,7 +28,7 @@
             <div class="col d-flex justify-content-center">
                 <!-- Checkbox -->
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="form2Example31"/>
+                    <input class="form-check-input" type="checkbox" id="form2Example31" name="remember-me"/>
                     <label class="form-check-label" for="form2Example31"> Remember me </label>
                 </div>
             </div>
