Add link to login page

--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -27,6 +27,9 @@
             <input type="password" class="form-control" name="password" id="password" placeholder="Password">
         </div>
         <button type="submit" class="btn btn-primary w-100">Sign up</button>
+        <div class="text-center mt-3">
+            <a th:href="@{/login}">Back to log in</a>
+        </div>
     </form>
 </div>
 </body>
