--- a/src/main/resources/templates/tasks.html
+++ b/src/main/resources/templates/tasks.html
@@ -2,10 +2,39 @@
 <html xmlns:th="http://www.w3.org/1999/xhtml">
 <link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css}" rel="stylesheet" />
 <body>
-
-<div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
-    <h1>This is my main page</h1>
+<head>
+    <meta charset="UTF-8" />
+    <title>Todo list</title>
+    <link rel="stylesheet" th:href="@{/css/style.css}" />
+</head>
+<main>
+<div class="container">
+    <header class="p-3 mb-3 border-bottom">
+        <div class="container">
+            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+                <div class="mr-auto">
+                    <img th:src="@{/images/logo.png}" width="auto" height="40px" alt="Logo" />
+                </div>
+                <div class="dropdown text-end ms-auto">
+                    <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
+                        <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle">
+                    </a>
+                    <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1" style="">
+                        <li><a class="dropdown-item d-flex justify-content-center" href="#">Settings</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li>
+                            <form th:action="@{/logout}" method="post" class="d-flex justify-content-center">
+                                <button type="submit" class="btn btn-primary">Logout</button>
+                            </form>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </header>
+    <div class="divider"></div>
 </div>
-
+</main>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
