--- a/src/main/resources/templates/tasks.html
+++ b/src/main/resources/templates/tasks.html
@@ -17,7 +17,7 @@
                 </div>
                 <div class="dropdown text-end ms-auto">
                     <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
-                        <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle">
+                        <img th:src="${user.userPicture != null} ? @{/avatars/${user.userPicture}} : @{/avatars/anonymous.png}" alt="mdo" width="32" height="32" class="rounded-circle">
                     </a>
                     <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1" style="">
                         <li><a class="dropdown-item d-flex justify-content-center" href="#">Settings</a></li>
@@ -34,6 +34,9 @@
     </header>
     <div class="divider"></div>
 </div>
+    <div class="container mt-3">
+        <h3 class="d-flex justify-content-center">My Main Page</h3>
+    </div>
 </main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
