--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,8 +5,8 @@
     <title>Please Log In</title>
 </head>
 <body>
-<div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
-    <form th:action="@{/login}" method="post" class="p-4 border bg-light" style="min-width: 300px; max-width: 400px; width: 100%;">
+<div class="d-flex justify-content-center align-items-center bg-light" style="height: 100vh;">
+    <form th:action="@{/login}" method="post" class="p-4 border bg-white" style="min-width: 300px; max-width: 400px; width: 100%;">
         <h4 class="text-uppercase text-center mb-5" style="letter-spacing: 1px;">Sign into your account</h4>
 <!--        Alerts-->
         <div class="alert alert-danger" role="alert" th:if="${param.error}">
