--- a/src/main/resources/templates/tasks.html
+++ b/src/main/resources/templates/tasks.html
@@ -7,9 +7,9 @@
     <title>Todo list</title>
     <link rel="stylesheet" th:href="@{/css/style.css}" />
 </head>
-<main>
+<main class="bg-light vh-100">
 <div class="container">
-    <header class="p-3 mb-3 border-bottom">
+    <header class="p-3 mb-3 border-bottom bg-white">
         <div class="container">
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                 <div class="mr-auto">
