--- a/src/main/resources/templates/tasks.html
+++ b/src/main/resources/templates/tasks.html
@@ -17,7 +17,7 @@
                 </div>
                 <div class="dropdown text-end ms-auto">
                     <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
-                        <img th:src="${user.userPicture != null} ? @{/avatars/${user.userPicture}} : @{/avatars/anonymous.png}" alt="mdo" width="32" height="32" class="rounded-circle">
+                        <img th:src="${user.userPicture != null} ? @{|/avatars/${user.userPicture}|} : @{/avatars/anonymous.png}" alt="mdo" width="32" height="32" class="rounded-circle">
                     </a>
                     <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1" style="">
                         <li><a class="dropdown-item d-flex justify-content-center" th:href="@{/settings}">Settings</a></li>
