--- a/src/main/resources/templates/settings.html
+++ b/src/main/resources/templates/settings.html
@@ -9,15 +9,19 @@
 <body class="bg-light vh-100 d-flex">
     <div class="container" style="max-width: 960px;">
         <div class="mx-auto w-100 mt-5 py-3">
+            <div class="text-center mb-3">
+                <img th:src="${user.userPicture != null} ? @{|/avatars/${user.userPicture}|} : @{/avatars/anonymous.png}" alt="mdo" width="100" height="100" class="rounded-circle mb-1">
+                <p class="fw-bold" th:text="${user.username}"></p>
+            </div>
             <h2 class="mb-3 fw-bold" style="display: inline-block;">Settings</h2>
             <a th:href="@{/tasks}" style="margin-left: 10px;" class="mb-3">Back to tasks</a>
             <div class="d-flex">
                 <div class="card w-100 p-3 bg-white me-2">
                     <div class="card-body">
                         <h3 class="card-title mb-3">Change image</h3>
-                        <form style="height: 296px;" class="position-relative">
+                        <form style="height: 296px;" class="position-relative" method="post" th:action="@{/settings/changeImage}" enctype="multipart/form-data">
                             <div class="mb-3">
-                                <input class="form-control" type="file" accept="image/*">
+                                <input class="form-control" type="file" name="file" accept="image/*">
                             </div>
                             <button type="submit" class="btn btn-primary mt-auto position-absolute bottom-0">Save</button>
                         </form>
