--- a/src/main/resources/templates/settings.html
+++ b/src/main/resources/templates/settings.html
@@ -23,6 +23,9 @@
                             <div class="mb-3">
                                 <input class="form-control" type="file" name="file" accept="image/*">
                             </div>
+                            <div th:if="${errorMessage != null}" class="alert alert-danger" role="alert">
+                                <p th:text="${errorMessage}"></p>
+                            </div>
                             <button type="submit" class="btn btn-primary mt-auto position-absolute bottom-0">Save</button>
                         </form>
 
@@ -46,7 +49,6 @@
                             </div>
                             <button type="submit" class="btn btn-primary">Submit</button>
                         </form>
-
                     </div>
                 </div>
             </div>
