--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -15,6 +15,9 @@
             You have been logged out.</div>
         <div class="alert alert-success" th:if="${param.success}">
             You have successfully registered.</div>
+        <div class="alert alert-success" th:if="${param.changePassword}">
+            Password change successful. You can now log in with your new password.
+        </div>
 <!--        Form inputs-->
         <div class="mb-3">
             <label for="username" class="form-label">Username</label>
