--- a/src/main/resources/templates/settings.html
+++ b/src/main/resources/templates/settings.html
@@ -34,18 +34,27 @@
                 <div class="card w-100 p-3 bg-white ms-2">
                     <div class="card-body">
                         <h3 class="card-title mb-3">Change password</h3>
-                        <form>
+                        <form th:action="@{/settings/changePassword}" th:object="${form}" method="post">
+                            <div th:if="${#fields.hasErrors('currentPassword')}" class="alert alert-danger" role="alert">
+                                <p th:text="${#fields.errors('currentPassword')[0]}"></p>
+                            </div>
                             <div class="mb-3">
                                 <label for="current-password" class="form-label">Current password</label>
-                                <input class="form-control" id="current-password" type="text">
+                                <input class="form-control" id="current-password" type="password" name="currentPassword">
+                            </div>
+                            <div th:if="${#fields.hasErrors('newPassword')}" class="alert alert-danger" role="alert">
+                                <p th:text="${#fields.errors('newPassword')[0]}"></p>
                             </div>
                             <div class="mb-3">
                                 <label for="new-password" class="form-label">New password</label>
-                                <input class="form-control" id="new-password" type="text">
+                                <input class="form-control" id="new-password" type="password" name="newPassword">
+                            </div>
+                            <div th:if="${#fields.hasErrors('repeatPassword')}" class="alert alert-danger" role="alert">
+                                <p th:text="${#fields.errors('repeatPassword')[0]}"></p>
                             </div>
                             <div class="mb-3">
-                                <label for="confirm-password" class="form-label">Confirm password</label>
-                                <input class="form-control" id="confirm-password" type="text">
+                                <label for="repeat-password" class="form-label">Confirm password</label>
+                                <input class="form-control" id="repeat-password" type="password" name="repeatPassword">
                             </div>
                             <button type="submit" class="btn btn-primary">Submit</button>
                         </form>
