--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -18,6 +18,9 @@
         <div class="alert alert-success" th:if="${param.changePassword}">
             Password change successful. You can now log in with your new password.
         </div>
+        <div class="alert alert-success" th:if="${param.delete}">
+            Your account has been deleted.
+        </div>
 <!--        Form inputs-->
         <div class="mb-3">
             <label for="username" class="form-label">Username</label>
